// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c3 {
  font-size: 1.5rem;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border-radius: 50%;
  width: 3.5rem;
  height: 3.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 3px solid;
  background-color: white;
  border-color: #cecece;
}

.c4 {
  margin-top: 8px;
  text-align: center;
  font-family: 'Open Sans',sans-serif;
  color: #666666;
  font-size: 0.8rem;
}

.c2 {
  font-size: 2rem;
  color: #666666;
}

<styled.div>
  <div
    className="c0"
  >
    <styled.div
      active={false}
      done={false}
    >
      <div
        className="c1"
      >
        <Styled(Icon)
          active={false}
          type="settings"
        >
          <styled.i
            active={false}
            className="material-icons c2"
          >
            <i
              className="material-icons c2 c3"
            >
              settings
            </i>
          </styled.i>
        </Styled(Icon)>
      </div>
    </styled.div>
    <styled.div>
      <div
        className="c4"
      >
        Settings
      </div>
    </styled.div>
  </div>
</styled.div>
`;

exports[`renders correctly with state 1`] = `
.c3 {
  font-size: 1.5rem;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border-radius: 50%;
  width: 3.5rem;
  height: 3.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 3px solid;
  background-color: white;
  border-color: #cecece;
  background-color: #2da0c7;
  border-color: white;
}

.c4 {
  margin-top: 8px;
  text-align: center;
  font-family: 'Open Sans',sans-serif;
  color: #666666;
  font-size: 0.8rem;
}

.c2 {
  font-size: 2rem;
  color: #666666;
  color: white;
}

<styled.div>
  <div
    className="c0"
  >
    <styled.div
      active={true}
      done={false}
    >
      <div
        className="c1"
      >
        <Styled(Icon)
          active={true}
          type="settings"
        >
          <styled.i
            active={true}
            className="material-icons c2"
          >
            <i
              className="material-icons c2 c3"
            >
              settings
            </i>
          </styled.i>
        </Styled(Icon)>
      </div>
    </styled.div>
    <styled.div>
      <div
        className="c4"
      >
        Settings active
      </div>
    </styled.div>
  </div>
</styled.div>
`;

exports[`renders correctly with state 2`] = `
.c3 {
  font-size: 1.5rem;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border-radius: 50%;
  width: 3.5rem;
  height: 3.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 3px solid;
  background-color: white;
  border-color: #cecece;
  border-color: #2da0c7;
}

.c4 {
  margin-top: 8px;
  text-align: center;
  font-family: 'Open Sans',sans-serif;
  color: #666666;
  font-size: 0.8rem;
}

.c2 {
  font-size: 2rem;
  color: #666666;
}

<styled.div>
  <div
    className="c0"
  >
    <styled.div
      active={false}
      done={true}
    >
      <div
        className="c1"
      >
        <Styled(Icon)
          active={false}
          type="settings"
        >
          <styled.i
            active={false}
            className="material-icons c2"
          >
            <i
              className="material-icons c2 c3"
            >
              settings
            </i>
          </styled.i>
        </Styled(Icon)>
      </div>
    </styled.div>
    <styled.div>
      <div
        className="c4"
      >
        Settings done
      </div>
    </styled.div>
  </div>
</styled.div>
`;
